- Complete draft of causes (still need to look thru old text for any gems) - Spellcheck

--- a/docs/MPM_errors_manuscript/Bibliography.bib
+++ b/docs/MPM_errors_manuscript/Bibliography.bib
@@ -256,3 +256,39 @@ year = {2001},
 abstract = {}, 
 keywords = {}}
 
+@Article{Cousin2006,
+author = {Cousin, G. }, 
+title = {{An introduction to threshold concepts}}, 
+journal = {Planet}, 
+volume = {17}, 
+pages = {4-5}, 
+year = {2006}, 
+abstract = {}, 
+location = {}, 
+keywords = {}}
+
+
+@Book{Meyer2006,
+author = {}, 
+title = {Overcoming Barriers to Student Understanding: Threshold concepts and troublesome knowledge}, 
+volume = {}, 
+pages = {}, 
+editor = {Meyer, Jan and Land, Ray}, 
+publisher = {Routledge}, 
+address = {London}, 
+year = {2006}, 
+abstract = {Book Description: It has long been a matter of concern to teachers in higher education why certain students ‘get stuck’ at particular points in the curriculum whilst others grasp concepts with comparative ease. What accounts for this variation in student performance and, more importantly, how can teachers change their teaching and courses to help students overcome such barriers? This book examines the difficulties of student learning and offers advice on how to overcome them through course design, assessment practice and teaching methods. It also provides innovative case material from a wide range of institutions and disciplines, including the social sciences, the humanities, the sciences and economics.}, 
+keywords = {}}
+
+@Incollection{Meyer2003a,
+author = {Meyer, J. H. F. and Land, R. }, 
+title = {{Threshold concepts and troublesome knowledge (1): linkages to ways of thinking and practising}}, 
+booktitle = {Improving Student Learning --- ten years on}, 
+editor = {Rust, C. }, 
+publisher = {Oxford Centre for Staff Development}, 
+address = {Oxford. UK}, 
+pages = {}, 
+year = {2003}, 
+abstract = {}, 
+keywords = {}}
+
